# mindscape-ama-format

./: .gitignore  README.md  pyproject.toml
baml_src/: clients.baml  extract_questions.baml  generators.baml  locate_snippets.baml
files/: prompt.txt
src/mindscape-ama-format/: extract_qa.py  final_output.py  prepare_questions.py
src/mindscape-ama-format/baml_client/: __init__.py  _baml.py  async_client.py  async_request.py  config.py  globals.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  tracing.py  type_builder.py  types.py
